[gd_scene load_steps=6 format=2]

[ext_resource path="res://pixelart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script.gd" type="Script" id=2]
[ext_resource path="res://2iLogo.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="ColorRect" parent="."]
margin_right = 1292.0
margin_bottom = 737.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.04
margin_top = -224.0
margin_right = 367.96
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
text = "How are you today?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.7241
margin_top = -53.6841
margin_right = -11.7241
margin_bottom = -13.6841
rect_scale = Vector2( 0.2, 0.2 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 801.635
margin_top = 484.805
margin_right = 868.635
margin_bottom = 521.805
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
anchor_left = 0.334
anchor_top = 0.699
anchor_right = 0.334
anchor_bottom = 0.699
margin_left = 0.47998
margin_top = -20.28
margin_right = 375.48
margin_bottom = 19.72
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
margin_left = 500.338
margin_top = 41.5462
margin_right = 602.338
margin_bottom = 81.5462
rect_scale = Vector2( 3, 3 )
text = "Yes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton2" type="CheckButton" parent="."]
visible = false
margin_left = 500.338
margin_top = 140.487
margin_right = 602.338
margin_bottom = 180.487
rect_scale = Vector2( 3, 3 )
text = "No"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 810.797
margin_top = 127.367
margin_right = 913.797
margin_bottom = 166.367
text = "Submit Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.508
anchor_top = 1.0
anchor_right = 0.508
anchor_bottom = 1.0
margin_left = -193.03
margin_top = -263.79
margin_right = 191.97
margin_bottom = -158.79
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_right = 385.0
margin_bottom = 50.0
size_flags_vertical = 3
text = "You cant, I can never forgive you."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 385.0
margin_bottom = 105.0
size_flags_vertical = 3
text = "Show me a picture of a cat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.388
margin_top = 468.327
margin_right = 419.612
margin_bottom = 1038.33
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
